Templates index.html.twig + persos.html.twig

--- a/templates/person/index.html.twig
+++ b/templates/person/index.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
-{% block title %}Hello PersonController!{% endblock %}
+{% block title %}Acceuil{% endblock %}
 
 {% block monTitre %}Page d'acceuil{% endblock %}
 
