--- a/templates/person/persos.html.twig
+++ b/templates/person/persos.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base2.html.twig' %}
 
-{% block title %}Hello PersonController!{% endblock %}
+{% block title %}Personages{% endblock %}
 
 {% block monTitre %}Liste des personnages{% endblock %}
 
