envoyer des donnés depuis le controlleur vers les template Twig

--- a/templates/person/persos.html.twig
+++ b/templates/person/persos.html.twig
@@ -2,6 +2,14 @@
 
 {% block title %}Personages{% endblock %}
 
-{% block monTitre %}Liste des personnages{% endblock %}
+{% block monTitre %}
+    Liste des personnages
+{% endblock %}
 
-{% block body %}{% endblock %}
+{% block body %}
+    <div>Pseudo: {{ pseudo }}</div>
+    <div>Age: {{ age }}</div>
+    <div>Force: {{ carac.force }}</div>
+    <div>Agilite: {{ carac.agi }}</div>
+    <div>Intel: {{ carac.intel }}</div>
+{% endblock %}
