--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    {% include "menu.html.twig" %}
     <h1 class="rounded border border-dark bg-primary p-2 m-2 text-white">{% block monTitre %}{% endblock %}</h1>
     {% block body %}{% endblock %}
 
