Menu: les Routes

--- a/templates/person/index.html.twig
+++ b/templates/person/index.html.twig
@@ -4,4 +4,6 @@
 
 {% block monTitre %}Page d'acceuil{% endblock %}
 
-{% block body %}{% endblock %}
+{% block body %}
+    <a href="{{ path("personnages") }}">lien vers les personnages</a>
+{% endblock %}
