clean + images + css

--- a/templates/person/persos.html.twig
+++ b/templates/person/persos.html.twig
@@ -7,6 +7,9 @@
 {% endblock %}
 
 {% block body %}
+    <div>
+        <img src="{{ asset("images/personnages/Marc.png") }}">
+    </div>
     <div>Pseudo: {{ pseudo }}</div>
     <div>Age: {{ age }}</div>
     <div>Force: {{ carac.force }}</div>
