--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -4,12 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     {% block title %}<title>WELCOME TO DRK</title>{% endblock %}
-
-    <!-- CSS  -->
-    {% block stylesheet %}{% endblock %}
-
     <!-- BOOTSTRAP 4  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ asset("css/main.css") }}" >
+    <!-- CSS  -->
+    {% block stylesheet %}{% endblock %}
+    
   </head>
 
   <body>
