Afficher les infos d'une seule personnage

--- a/templates/person/persos.html.twig
+++ b/templates/person/persos.html.twig
@@ -19,8 +19,8 @@
         </tr>
         {% for player in players %}
             <tr>
-                <td><img src="{{ asset('images/personnages/' ~ player.nom ~ '.png') }}"</td>
-                <td>{{ player.nom }}</td>
+                <td><img src="{{ asset('images/personnages/' ~ player.nom ~ '.png') }}" style="width: 20%;" ></td>
+                <td><a href="{{ path('afficher_personnage', {'nom' : player.nom | lower }) }}">{{ player.nom }}</a></td>
                 <td>{{ player.age }}</td>
                 <td>
                     {% if player.sexe %}
@@ -36,5 +36,4 @@
             </tr>
         {% endfor %}
     </table>
-    
 {% endblock %}
