--- a/templates/person/perso.html.twig
+++ b/templates/person/perso.html.twig
@@ -9,7 +9,7 @@
 {% block body %}
     <div class="row">
         <div class="col-2">
-            <img src="{{ asset('images/personnages/' ~ perso.nom ~ '.png') }}" style="width: 90%;" >
+            <img src="{{ asset('images/personnages/' ~ perso.nom ~ '.png') }}" >
         </div>
         <div class="col">
             <h2>{{ perso.nom }}</h2>
