--- a/templates/person/persos.html.twig
+++ b/templates/person/persos.html.twig
@@ -19,7 +19,7 @@
         </tr>
         {% for player in players %}
             <tr>
-                <td><img src="{{ asset('images/personnages/' ~ player.nom ~ '.png') }}" style="width: 20%;" ></td>
+                <td><img src="{{ asset('images/personnages/' ~ player.nom ~ '.png') }}" ></td>
                 <td><a href="{{ path('afficher_personnage', {'nom' : player.nom | lower }) }}">{{ player.nom }}</a></td>
                 <td>{{ player.age }}</td>
                 <td>
